[Gtk] Regression: Push buttons no longer expose their displayed text/name https://bugs.webkit.org/show_bug.cgi?id=72804

Reviewed by Chris Fleizach.

Source/WebCore:

Use AccessibilityObject::title() as the last fallback in
webkit_accessible_get_name() right before relying on the
stringValue() method, if no better alternative was found.

Test: platform/gtk/accessibility/button-accessible-name.html

* accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
(webkit_accessible_get_name): Use title() as the last fallback
method before using stringValue().

LayoutTests:

Add new GTK-specific layout test and expections.

* platform/gtk/accessibility/button-accessible-name-expected.txt: Added.
* platform/gtk/accessibility/button-accessible-name.html: Added.

Canonical link: https://commits.webkit.org/89829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101348 268f45cc-cd09-0410-ab3c-d52691b4dbfc